# astral

./: .gitignore  Cargo.toml  Makefile  README.md
analysis/: semantic_risk_analysis.py
contracts/: Vault.sol
scripts/: install.sh  test_analysis_output_language.sh  test_install.sh
src/: chunker.rs  main.rs  parser.rs  retrieval.rs  storage.rs  visualizer.rs
